--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "cli-color": "*",
         "dateformat": "*",
         "base58-native": "*",
-        "multi-hashing": "git://github.com/niobio-cash/node-multi-hashing.git",
+        "multi-hashing": "git://github.com/quangvu3/node-multi-hashing.git#Nan-2.0",
         "cryptonote-util": "git://github.com/niobio-cash/node-cryptonote-util.git"
     },
     "engines": {
