--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
         "cli-color": "*",
         "dateformat": "*",
         "base58-native": "*",
-        "multi-hashing": "git://github.com/niobio-cash/node-multi-hashing.git",
-        "cryptonote-util": "git://github.com/niobio-cash/node-cryptonote-util.git"
+        "cryptonight-hashing": "git://github.com/MoneroOcean/node-cryptonight-hashing.git",
+        "cryptoforknote-util": "git://github.com/MoneroOcean/node-cryptoforknote-util.git"
     },
     "engines": {
-        "node": ">=0.10"
+        "node": ">=4.0.0"
     }
 }
