--- a/config_example.json
+++ b/config_example.json
@@ -3,6 +3,10 @@
     "symbol": "NBR",
     "coinUnits": 100000000,
     "coinDifficultyTarget": 240,
+    
+    "cnAlgorithm": "cryptonight_heavy",
+    "cnVariant": null,
+    "cnBlobType": 2,
 
     "logging": {
         "files": {
